--- a/design.html
+++ b/design.html
@@ -9,7 +9,7 @@
 
 <body>
     <header class="membre1">
-        <h1>Communication au sein d’une équipe de projet Web</h1>        
+        <h1>Création et design de sites Web</h1>        
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>                
