--- a/pw1.html
+++ b/pw1.html
@@ -9,7 +9,7 @@
 
 <body>
     <header class="membre1">
-        <h1>Communication au sein d’une équipe de projet Web</h1>        
+        <h1>Projet Web 1</h1>        
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>                
