--- a/prog-ui.html
+++ b/prog-ui.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Communication</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/cours.css">
 </head>
 
 <body>
