--- a/prog-ui.html
+++ b/prog-ui.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Communication</title>
+    <title>Programmation d’interface Web 1</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
@@ -20,8 +20,11 @@
         <section>
             <h3>Connaissances</h3>
             <h4>Théoriques (quels sont les notions que vous avez retenues)?</h4>
+            <p>Nous avons appris à faire changer la couleur d'arrière-plan d'un personnage aléatoirement et toutes les 5 secondes, sans arrêt.</p>
             <h4>Pratiques (quels sont les logiciels que vous avez appris)?</h4>
-            <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>            
+            <p>Nous avons appris javascript dans ce cours.</p>
+            <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>    
+            <p>Nous avons fait une petite interface avec un bonhonmme ou on peut changer la forme et largeur de sa tête, bouche, yeux et couleur sans rafraichir le navigateur</p>        
         </section>
     </main>
 </body>
