Modification des H1 des pages de la partie1

--- a/env2.html
+++ b/env2.html
@@ -9,10 +9,10 @@
 
 <body>
     <header class="membre1">
-        <h1>Communication au sein d’une équipe de projet Web</h1>        
+        <h1>Environnement de développement Web 2</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Accueil</a></li>                
+                <li><a href="index.html">Accueil</a></li>
             </ul>
         </nav>
     </header>
@@ -21,7 +21,7 @@
             <h3>Connaissances</h3>
             <h4>Théoriques (quels sont les notions que vous avez retenues)?</h4>
             <h4>Pratiques (quels sont les logiciels que vous avez appris)?</h4>
-            <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>            
+            <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>
         </section>
     </main>
 </body>
