Mis à jour de la page de création et design de site web

--- a/design.html
+++ b/design.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Communication</title>
+    <title>Création et design de sites Web</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
@@ -20,8 +20,11 @@
         <section>
             <h3>Connaissances</h3>
             <h4>Théoriques (quels sont les notions que vous avez retenues)?</h4>
+            <p>Nous avons appris à faire du responsive et des breakpoints</p>
             <h4>Pratiques (quels sont les logiciels que vous avez appris)?</h4>
-            <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>            
+            <p>Nous avons travaillé avec CSS et Adobe XD</p>
+            <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>     
+            <p>Nous avons fait le Pitou blog comme synthèse, un site web pour appliquer nos nouvelles connaissances</p>       
         </section>
     </main>
 </body>
