Mis à jour de programmation web avancé

--- a/prog3.html
+++ b/prog3.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Communication</title>
+    <title>Programmation Web avancée</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
@@ -20,8 +20,11 @@
         <section>
             <h3>Connaissances</h3>
             <h4>Théoriques (quels sont les notions que vous avez retenues)?</h4>
+            <p>Nous avons appris à travailler avec la structure MVC</p>
             <h4>Pratiques (quels sont les logiciels que vous avez appris)?</h4>
-            <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>            
+            <p>Nous avons utilisé PHP et SQL dans ce cours.</p>
+            <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>      
+            <p>Nous avons réalisé de project de créer un genre de site d'activités</p>      
         </section>
     </main>
 </body>
