--- a/design.html
+++ b/design.html
@@ -19,13 +19,19 @@
     <main>
         <section>
             <h3>Connaissances</h3>
-            <h4>Théoriques (quels sont les notions que vous avez retenues)?</h4>
-            <p>Nous avons appris à faire du responsive et des breakpoints</p>
-            <h4>Pratiques (quels sont les logiciels que vous avez appris)?</h4>
-            <p>Nous avons travaillé avec CSS et Adobe XD</p>
-            <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>     
-            <p>Nous avons fait le Pitou blog comme synthèse, un site web pour appliquer nos nouvelles connaissances</p>       
-        </section>
+        
+            <div class="column-container">
+              <div class="column">
+                <h4>Théoriques (quels sont les notions que vous avez retenues)?</h4>
+              </div>
+              <div class="column">
+                <h4>Pratiques (quels sont les logiciels que vous avez appris)?</h4>
+              </div>
+              <div class="column">
+                <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>
+              </div>
+            </div>
+          </section>
     </main>
 </body>
 
