--- a/ux.html
+++ b/ux.html
@@ -19,10 +19,19 @@
     <main>
         <section>
             <h3>Connaissances</h3>
-            <h4>Théoriques (quels sont les notions que vous avez retenues)?</h4>
-            <h4>Pratiques (quels sont les logiciels que vous avez appris)?</h4>
-            <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>            
-        </section>
+        
+            <div class="column-container">
+              <div class="column">
+                <h4>Théoriques (quels sont les notions que vous avez retenues)?</h4>
+              </div>
+              <div class="column">
+                <h4>Pratiques (quels sont les logiciels que vous avez appris)?</h4>
+              </div>
+              <div class="column">
+                <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>
+              </div>
+            </div>
+          </section>
     </main>
 </body>
 
