écrire le contenu de cms, prog 3, prog-ui2, pw1 et ux

--- a/pw1.html
+++ b/pw1.html
@@ -20,8 +20,11 @@
         <section>
             <h3>Connaissances</h3>
             <h4>Théoriques (quels sont les notions que vous avez retenues)?</h4>
+            <p>J'ai appris à mieux travailler avec les notions MVC pour PHP dans la conception d'un site web et aussi à gérer mon temps.</p>
             <h4>Pratiques (quels sont les logiciels que vous avez appris)?</h4>
-            <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>            
+            <p>Nous avons utilisé PHP, HTML, CSS, SQL, et notre serveur dans ce cours.</p>
+            <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>    
+            <p>Nous avons créé un site web à partir de zéro, en simulant un vrai client.</p>        
         </section>
     </main>
 </body>
