--- a/ux.html
+++ b/ux.html
@@ -20,8 +20,11 @@
         <section>
             <h3>Connaissances</h3>
             <h4>Théoriques (quels sont les notions que vous avez retenues)?</h4>
+            <p>Nous avons appris à faire des interfaces qui sont plus intuitives d'utilisation, nous avons appris à faire des bouttons avec des importances différentes.</p>
             <h4>Pratiques (quels sont les logiciels que vous avez appris)?</h4>
-            <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>            
+            <p>Nous avons utilisé adobe XD pour ce cours</p>
+            <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>
+            <p>Nous avons faire une maquette complète de site web avec explications des composantes et leur utilité.</p>            
         </section>
     </main>
 </body>
