Ajout des réponses aux questions des pages comm.html, creation.html, env1.html, env2.html, media.html, prog1.html et prog2.html.

--- a/comm.html
+++ b/comm.html
@@ -20,8 +20,19 @@
         <section>
             <h3>Connaissances</h3>
             <h4>Théoriques (quels sont les notions que vous avez retenues)?</h4>
+            <p>Les différentes étapes de la planification d'un projet, l'utilisation de dépôts GIT ainsi que
+                l'utilisation d'un gestionnaire de projet.</p>
             <h4>Pratiques (quels sont les logiciels que vous avez appris)?</h4>
+            <ul>
+                <li>Github</li>
+                <li>Sourcetree</li>
+                <li>Gestionnaire de projet (Clickup, Asana)</li>
+            </ul>
             <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>
+            <ul>
+                <li>Travail en équipe pour explorer Sourcetree et Github.</li>
+                <li>Travail en équipe pour explorer la planification d'un projet.</li>
+            </ul>
         </section>
     </main>
 </body>
