--- a/env2.html
+++ b/env2.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Communication</title>
+    <title>Environnement 2</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
@@ -20,8 +20,20 @@
         <section>
             <h3>Connaissances</h3>
             <h4>Théoriques (quels sont les notions que vous avez retenues)?</h4>
+            <p>L'utilisation de AWS(Amazon Web Service) pour héberger un serveur distant (Ubuntu) ainsi que
+                l'installation et l'utilisation de base de Wordpress sur celui-ci.</p>
             <h4>Pratiques (quels sont les logiciels que vous avez appris)?</h4>
+            <ul>
+                <li>AWS(Amazon Web Service)</li>
+                <li>Linux(Ubuntu)</li>
+                <li>Wordpress</li>
+            </ul>
             <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>
+            <ul>
+                <li>Journal de bord du cours.</li>
+                <li>Tutoriel sur la configuration d'un serveur distant ainsi que l'installation de Wordpress et
+                    l'utilisation de Wordpress.</li>
+            </ul>
         </section>
     </main>
 </body>
