Fichier finaux, contenu final + balises finales de la section "Rédaction des textes partie 2" de felix brouillet et annie kim deroy + résolutions de tous les confilts.

--- a/cms.html
+++ b/cms.html
@@ -3,29 +3,42 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Communication</title>
+    <title>Introduction à un gestionnaire de contenu</title>
     <link rel="stylesheet" type="text/css" href="css/cours.css">
 </head>
 
 <body>
     <header class="membre1">
-        <h1>Introduction à un gestionnaire de contenu</h1>        
+        <h1>Introduction à un gestionnaire de contenu</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Accueil</a></li>                
+                <li><a href="index.html">Accueil</a></li>
             </ul>
         </nav>
     </header>
     <main>
+
         <section>
             <h3>Connaissances</h3>
-            <h4>Théoriques (quels sont les notions que vous avez retenues)?</h4>
-            <p>Nous avons appris que wordpress est un bon outil pour travailler à partir de template déja créé</p>
-            <h4>Pratiques (quels sont les logiciels que vous avez appris)?</h4>
-            <p>Nous avons utilisé wordpress, HTML, SQL, CSS et notre serveur pour ce cours.</p>
-            <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4> 
-            <p>Nous avons créé notre propre template de site web sur wordpress et essayé d'imiter un site web fourni par le professeur.</p>           
+
+            <div class="column-container">
+                <div class="column">
+                    <h4>Théoriques (quels sont les notions que vous avez retenues)?</h4>
+                    <p>Nous avons appris que wordpress est un bon outil pour travailler à partir de template déja créé
+                    </p>
+                </div>
+                <div class="column">
+                    <h4>Pratiques (quels sont les logiciels que vous avez appris)?</h4>
+                    <p>Nous avons utilisé wordpress, HTML, SQL, CSS et notre serveur pour ce cours.</p>
+                </div>
+                <div class="column">
+                    <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>
+                    <p>Nous avons créé notre propre template de site web sur wordpress et essayé d'imiter un site web
+                        fourni par le professeur.</p>
+                </div>
+            </div>
         </section>
+
     </main>
 </body>
 
