--- a/design.html
+++ b/design.html
@@ -23,12 +23,15 @@
             <div class="column-container">
               <div class="column">
                 <h4>Théoriques (quels sont les notions que vous avez retenues)?</h4>
+                <p>Nous avons appris à faire des pages web responsive.</p>
               </div>
               <div class="column">
                 <h4>Pratiques (quels sont les logiciels que vous avez appris)?</h4>
+                <p>Nous avons utilisé HTML, adobe XD et CSS</p>
               </div>
               <div class="column">
                 <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>
+                <p>Nous avons fait une page de site web responsive adapté à plusieurs formats.</p>
               </div>
             </div>
           </section>
