--- a/prog-ui.html
+++ b/prog-ui.html
@@ -23,12 +23,15 @@
             <div class="column-container">
               <div class="column">
                 <h4>Théoriques (quels sont les notions que vous avez retenues)?</h4>
+                <p>Nous avons appris à faire des changements dans une page web sans rafraichir la page.</p>
               </div>
               <div class="column">
                 <h4>Pratiques (quels sont les logiciels que vous avez appris)?</h4>
+                <p>Nous avons surtout utilisé javascript dans ce cours</p>
               </div>
               <div class="column">
                 <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>
+                <p>Nous avons fait un piano à l'aide de javascript</p>
               </div>
             </div>
           </section>
