--- a/prog-ui2.html
+++ b/prog-ui2.html
@@ -1,31 +1,42 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="UTF-8">
-    <title>Communication</title>
+    <title>Programmation d'interface web 2</title>
     <link rel="stylesheet" type="text/css" href="css/cours.css">
 </head>
 
 <body>
     <header class="membre1">
-        <h1>Programmation d’interface Web 2</h1>        
+        <h1>Programmation d’interface Web 2</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Accueil</a></li>                
+                <li><a href="index.html">Accueil</a></li>
             </ul>
         </nav>
     </header>
     <main>
+
         <section>
             <h3>Connaissances</h3>
-            <h4>Théoriques (quels sont les notions que vous avez retenues)?</h4>
-            <p>Nous avons appris à utiliser vue.js pour dynamiser certaines composantes d'un site web.</p>
-            <h4>Pratiques (quels sont les logiciels que vous avez appris)?</h4>
-            <p>Nous avons utilisé Vue.js</p>
-            <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>   
-            <p>Nous avons créé une version plus basique de spotify pour sélectionner et lire des musiques.</p>         
+
+            <div class="column-container">
+                <div class="column">
+                    <h4>Théoriques (quels sont les notions que vous avez retenues)?</h4>
+                    <p>Nous avons appris à utiliser vue.js pour dynamiser certaines composantes d'un site web.</p>
+                </div>
+                <div class="column">
+                    <h4>Pratiques (quels sont les logiciels que vous avez appris)?</h4>
+                    <p>Nous avons utilisé Vue.js</p>
+                </div>
+                <div class="column">
+                    <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>
+                    <p>Nous avons créé une version plus basique de spotify pour sélectionner et lire des musiques.</p>
+                </div>
+            </div>
         </section>
+
     </main>
 </body>
 
