--- a/ux.html
+++ b/ux.html
@@ -3,28 +3,42 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Communication</title>
+    <title>UX/UI appliqué au projet</title>
     <link rel="stylesheet" type="text/css" href="css/cours.css">
 </head>
 
 <body>
     <header class="membre1">
-        <h1>Design UX/UI appliqué au projet</h1>        
+        <h1>Design UX/UI appliqué au projet</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Accueil</a></li>                
+                <li><a href="index.html">Accueil</a></li>
             </ul>
         </nav>
     </header>
     <main>
+
         <section>
             <h3>Connaissances</h3>
-            <h4>Théoriques (quels sont les notions que vous avez retenues)?</h4>
-            <p>Nous avons appris à faire des interfaces qui sont plus intuitives d'utilisation, nous avons appris à faire des bouttons avec des importances différentes.</p>
-            <h4>Pratiques (quels sont les logiciels que vous avez appris)?</h4>
-            <p>Nous avons utilisé adobe XD pour ce cours</p>
-            <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>
-            <p>Nous avons faire une maquette complète de site web avec explications des composantes et leur utilité.</p>            
+
+            <div class="column-container">
+                <div class="column">
+                    <h4>Théoriques (quels sont les notions que vous avez retenues)?</h4>
+                    <p>Nous avons appris à faire des interfaces qui sont plus intuitives d'utilisation, nous avons
+                        appris à
+                        faire des bouttons avec des importances différentes.</p>
+                </div>
+                <div class="column">
+                    <h4>Pratiques (quels sont les logiciels que vous avez appris)?</h4>
+                    <p>Nous avons utilisé adobe XD pour ce cours</p>
+                </div>
+                <div class="column">
+                    <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>
+                    <p>Nous avons faire une maquette complète de site web avec explications des composantes et leur
+                        utilité.
+                    </p>
+                </div>
+            </div>
         </section>
     </main>
 </body>
