--- a/prog3.html
+++ b/prog3.html
@@ -2,14 +2,9 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-<<<<<<< HEAD
-    <title>Programmation Web avancée</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-=======
-    <title>Communication</title>
-    <link rel="stylesheet" type="text/css" href="css/cours.css">
->>>>>>> f75aac1b3ead33aa35fae17c663de499b73434ba
+  <meta charset="UTF-8">
+  <title>Programmation web avancée</title>
+  <link rel="stylesheet" type="text/css" href="css/cours.css">
 </head>
 
 <body>
@@ -24,13 +19,22 @@
     <main>
         <section>
             <h3>Connaissances</h3>
-            <h4>Théoriques (quels sont les notions que vous avez retenues)?</h4>
-            <p>Nous avons appris à travailler avec la structure MVC</p>
-            <h4>Pratiques (quels sont les logiciels que vous avez appris)?</h4>
-            <p>Nous avons utilisé PHP et SQL dans ce cours.</p>
-            <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>      
-            <p>Nous avons réalisé de project de créer un genre de site d'activités</p>      
-        </section>
+        
+            <div class="column-container">
+              <div class="column">
+                <h4>Théoriques (quels sont les notions que vous avez retenues)?</h4>
+                <p>Nous avons appris à travailler avec la structure MVC</p>
+              </div>
+              <div class="column">
+                <h4>Pratiques (quels sont les logiciels que vous avez appris)?</h4>
+                <p>Nous avons utilisé PHP et SQL dans ce cours.</p>
+              </div>
+              <div class="column">
+                <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>
+                <p>Nous avons réalisé de project de créer un genre de site d'activités</p>
+              </div>
+            </div>
+          </section>
     </main>
 </body>
 
