--- a/pw1.html
+++ b/pw1.html
@@ -3,29 +3,41 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Communication</title>
+    <title>Projet web 1</title>
     <link rel="stylesheet" type="text/css" href="css/cours.css">
 </head>
 
 <body>
     <header class="membre1">
-        <h1>Projet Web 1</h1>        
+        <h1>Projet Web 1</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Accueil</a></li>                
+                <li><a href="index.html">Accueil</a></li>
             </ul>
         </nav>
     </header>
     <main>
+
         <section>
             <h3>Connaissances</h3>
-            <h4>Théoriques (quels sont les notions que vous avez retenues)?</h4>
-            <p>J'ai appris à mieux travailler avec les notions MVC pour PHP dans la conception d'un site web et aussi à gérer mon temps.</p>
-            <h4>Pratiques (quels sont les logiciels que vous avez appris)?</h4>
-            <p>Nous avons utilisé PHP, HTML, CSS, SQL, et notre serveur dans ce cours.</p>
-            <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>    
-            <p>Nous avons créé un site web à partir de zéro, en simulant un vrai client.</p>        
+
+            <div class="column-container">
+                <div class="column">
+                    <h4>Théoriques (quels sont les notions que vous avez retenues)?</h4>
+                    <p>J'ai appris à mieux travailler avec les notions MVC pour PHP dans la conception d'un site web et
+                        aussi à gérer mon temps.</p>
+                </div>
+                <div class="column">
+                    <h4>Pratiques (quels sont les logiciels que vous avez appris)?</h4>
+                    <p>Nous avons utilisé PHP, HTML, CSS, SQL, et notre serveur dans ce cours.</p>
+                </div>
+                <div class="column">
+                    <h4>Conditionnelles (quels sont les projets que vous avez réalisés)?</h4>
+                    <p>Nous avons créé un site web à partir de zéro, en simulant un vrai client.</p>
+                </div>
+            </div>
         </section>
+
     </main>
 </body>
 
